--- a/src/pages/event-capture/components/default-event-entry-form/default-event-entry-form.html
+++ b/src/pages/event-capture/components/default-event-entry-form/default-event-entry-form.html
@@ -37,7 +37,7 @@
                             <div text-left>
                                 <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
                                     <div *ngIf="hiddenFields && !hiddenFields[dataElement.id]">
-                                        <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [(data)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" (onChange)="updateData($event)"></event-input-container>
+                                        <event-input-container [lockingFieldStatus]="isEventCompleted" [dataElement]="dataElement" [currentUser]="currentUser" [(data)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" (onChange)="updateData($event)"></event-input-container>
                                         <div *ngIf="dataElement.id && errorOrWarningMessage[dataElement.id]">
                                             <program-rule-action-message [programRuleActionMessage]="errorOrWarningMessage[dataElement.id]" [isEventCompleted]="isEventCompleted"></program-rule-action-message>
                                         </div>
@@ -56,7 +56,8 @@
         <div *ngFor="let programStageDataElement of programStage.programStageDataElements;trackBy: trackByFn">
             <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
                 <div *ngIf="hiddenFields && !hiddenFields[programStageDataElement.dataElement.id]">
-                    <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [(data)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory" (onChange)="updateData($event)"></event-input-container>
+                    <event-input-container [lockingFieldStatus]="isEventCompleted" [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [(data)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory"
+                        (onChange)="updateData($event)"></event-input-container>
                     <div *ngIf="errorOrWarningMessage[programStageDataElement.dataElement.id]">
                         <program-rule-action-message [programRuleActionMessage]="errorOrWarningMessage[programStageDataElement.dataElement.id]" [isEventCompleted]="isEventCompleted"></program-rule-action-message>
                     </div>
