--- a/src/global.scss
+++ b/src/global.scss
@@ -52,6 +52,7 @@ ion-modal.inset-modal {
     padding: 5px 10px 5px;
     margin-top: 5px;
     margin-bottom: 5px;
+    border: 1px solid #e6e6e7;
 }
 
 .grey-field {
