--- a/src/app/components/email-input/email-input.component.html
+++ b/src/app/components/email-input/email-input.component.html
@@ -24,7 +24,7 @@
 -->
 <ion-row>
     <ion-col>
-        <ion-item no-lines>
+        <ion-item lines="none">
             <ion-input [disabled]="lockingFieldStatus" (ionBlur)="updateValue()" [(ngModel)]="inputFieldValue" type="email">
             </ion-input>
         </ion-item>
