--- a/src/app/components/numerical-input/numerical-input.component.html
+++ b/src/app/components/numerical-input/numerical-input.component.html
@@ -25,23 +25,23 @@
 <ion-row>
     <ion-col>
         <div>
-            <div *ngIf="valueType == 'INTEGER' ||valueType == 'NUMBER'">
-                <ion-item no-lines>
+            <div *ngIf="valueType == 'INTEGER' || valueType == 'NUMBER'">
+                <ion-item lines="none">
                     <ion-input [readonly]="lockingFieldStatus" type="number" (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-input>
                 </ion-item>
             </div>
             <div *ngIf="valueType == 'INTEGER_POSITIVE'">
-                <ion-item no-lines>
+                <ion-item lines="none">
                     <ion-input [readonly]="lockingFieldStatus" type="number" min="1" (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-input>
                 </ion-item>
             </div>
             <div *ngIf="valueType == 'INTEGER_NEGATIVE'">
-                <ion-item no-lines>
+                <ion-item lines="none">
                     <ion-input [readonly]="lockingFieldStatus" type="number" max="-1" (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-input>
                 </ion-item>
             </div>
             <div *ngIf="valueType == 'INTEGER_ZERO_OR_POSITIVE'">
-                <ion-item no-lines>
+                <ion-item lines="none">
                     <ion-input [readonly]="lockingFieldStatus" type="number" min="0" (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-input>
                 </ion-item>
             </div>
