--- a/src/app/components/phone-number-input/phone-number-input.component.html
+++ b/src/app/components/phone-number-input/phone-number-input.component.html
@@ -24,7 +24,7 @@
 -->
 <ion-row>
     <ion-col>
-        <ion-item no-lines>
+        <ion-item lines="none">
             <ion-input [readonly]="lockingFieldStatus" (ionBlur)="updateValue()" [(ngModel)]="inputFieldValue" type="tel">
             </ion-input>
         </ion-item>
