--- a/src/app/components/password-input/password-input.component.html
+++ b/src/app/components/password-input/password-input.component.html
@@ -25,13 +25,13 @@
 <ion-row>
     <ion-col>
         <div *ngIf="updateOnChangeValue">
-            <ion-item no-lines>
-                <ion-input [readonly]="lockingFieldStatus" type="password" placeholder="{{placeholder |translate }}" (ionChange)="updatePasswordValue()" [(ngModel)]="inputFieldValue"></ion-input>
+            <ion-item lines="none">
+                <ion-input [readonly]="lockingFieldStatus" type="password" placeholder="{{ placeholder | translate }}" (ionChange)="updatePasswordValue()" [(ngModel)]="inputFieldValue"></ion-input>
             </ion-item>
         </div>
         <div *ngIf="!updateOnChangeValue">
-            <ion-item no-lines>
-                <ion-input [readonly]="lockingFieldStatus" type="password" placeholder="{{placeholder |translate }}" (ionBlur)="updatePasswordValue()" [(ngModel)]="inputFieldValue"></ion-input>
+            <ion-item lines="none">
+                <ion-input [readonly]="lockingFieldStatus" type="password" placeholder="{{ placeholder | translate }}" (ionBlur)="updatePasswordValue()" [(ngModel)]="inputFieldValue"></ion-input>
             </ion-item>
         </div>
     </ion-col>
