--- a/src/app/components/text-input/text-input.component.html
+++ b/src/app/components/text-input/text-input.component.html
@@ -26,26 +26,26 @@
     <ion-col>
         <div *ngIf="updateOnChangeValue">
             <div *ngIf="valueType === 'LONG_TEXT'">
-                <ion-item no-lines>
+                <ion-item lines="none">
                     <ion-textarea [readonly]="lockingFieldStatus" (ionChange)="updateTextInputValue()" [(ngModel)]="inputFieldValue">
                     </ion-textarea>
                 </ion-item>
             </div>
             <div *ngIf="valueType === 'TEXT'">
-                <ion-item no-lines>
+                <ion-item lines="none">
                     <ion-input [readonly]="lockingFieldStatus" type="text" placeholder="{{ placeholder | translate }}" (ionChange)="updateTextInputValue()" [(ngModel)]="inputFieldValue"></ion-input>
                 </ion-item>
             </div>
         </div>
         <div *ngIf="!updateOnChangeValue">
             <div *ngIf="valueType === 'LONG_TEXT'">
-                <ion-item no-lines>
+                <ion-item lines="none">
                     <ion-textarea [readonly]="lockingFieldStatus" (ionBlur)="updateTextInputValue()" [(ngModel)]="inputFieldValue">
                     </ion-textarea>
                 </ion-item>
             </div>
             <div *ngIf="valueType === 'TEXT'">
-                <ion-item no-lines>
+                <ion-item lines="none">
                     <ion-input [readonly]="lockingFieldStatus" type="text" placeholder="{{ placeholder | translate }}" (ionBlur)="updateTextInputValue()" [(ngModel)]="inputFieldValue"></ion-input>
                 </ion-item>
             </div>
