--- a/src/app/components/true-only-input/true-only-input.component.html
+++ b/src/app/components/true-only-input/true-only-input.component.html
@@ -1,4 +1,6 @@
-<ion-item no-lines>
-    <ion-label>Yes</ion-label>
+<ion-item lines="none">
+    <ion-label>
+        <span [translate]="'Yes'"></span>
+    </ion-label>
     <ion-checkbox slot="start" [disabled]="lockingFieldStatus" [color]="(colorSettings$ | async).colorAttributes.secondary" [(ngModel)]="inputFieldValue" (ionChange)="updateValues()"></ion-checkbox>
 </ion-item>
